# rgwl

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yaml
docs/: console.html  index.html  robots.txt  search.json  sitemap.xml  wikipedia.html
notebooks/: console.ipynb  index.qmd  nbdev.yml  settings.ini  sidebar.yml  wikipedia.ipynb
tests/: conftest.py  test_console.py  test_wikipedia.py
wikiapp/: __init__.py  console.py  wikipedia.py
